--- a/Projects/MyLibraryProject/style.css
+++ b/Projects/MyLibraryProject/style.css
@@ -2,10 +2,18 @@
 
 body {
   display: grid;
+  grid-template-columns: 1fr;
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
   background-color: #e0eaf7;
+  background-image: linear-gradient(rgba(12, 138, 143, 0.5), rgba(255, 255, 0, 0.5)),
+                        url("images/1520624981944.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  /* background-position: bottom -150px right 0px; */
+  background-blend-mode: multiply;
+  
 }
 
 h1 {
@@ -38,6 +46,9 @@ img:hover {
 
 .header {
   background-color: #e6e7e5;
+  position: sticky;
+  z-index: 998;
+  top: 0px;
   height: 15vh;
   box-shadow: 0px 5px 5px rgba(163, 161, 161, 0.2);
   display: flex;
@@ -75,7 +86,7 @@ img:hover {
   padding-bottom: 10px;
 }
 #add-book-button {
-  padding: 10px 20px;
+  padding: 10px 20px;  
   border: none;
   font-size: 17px;
   color: #fff;
@@ -98,15 +109,27 @@ img:hover {
   scale: 1.05;
 }
 
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(7, 102, 94, 0.623);
+  /* Semi-transparent black */
+  backdrop-filter: blur(8px);
+  /* Apply blur effect */
+  z-index: 999;
+  display: none;
+  /* Initially hidden */
+}
+
 .popup-container {
   display: grid;
   grid-template-rows: 70px 1fr 50px;
   width: 500px;
   top: 50%;
   left: 50%;
-
-  /*justify-items: left;
-  align-items: center; */
   position: fixed;
   transform: translate(-50%, -50%);
   background-color: #ebf3f3;
@@ -114,7 +137,8 @@ img:hover {
   gap: 10px;
   margin-left: 0px;
   border-radius: 20px;
-  box-shadow: 0px 4px 4px 0px rgb(32, 32, 32);
+  box-shadow: 0px 20px 50px -2px rgb(7, 7, 7);
+  
   z-index: 1000;
   display: none;
   /* Initially hidden */
@@ -124,7 +148,6 @@ img:hover {
 
 .popup-container>div {
   width: 100%;
-  /* border: 1px solid red;  */
   display: flex;
   align-items: center;
   gap: 20px;
@@ -133,11 +156,11 @@ img:hover {
   align-self: center;
 }
 
-.popup-container>label {
+.popup-container label {
   width: 60px;
   font-size: 18px;
   color: cadetblue;
-
+  text-align: right;
 }
 
 #title,
@@ -147,6 +170,7 @@ img:hover {
   border: 1px transparent;
   width: 100%;
   height: 30px;
+
 }
 
 #insert-book-title-popup {
@@ -185,13 +209,13 @@ input:focus {
 
 .switch-container {
   display: grid;
-  grid-template-rows: 50px;
+  grid-template-rows: 40px;
   width: min-content;
-  gap: 30px;
+  gap: 10px;
   justify-self: center;
 }
 .switch {
-  display: inline-block;
+  display: block;
   position: relative;
   width: 40px;
   height: 20px;
@@ -199,9 +223,10 @@ input:focus {
   border-radius: 20px;
   color: #fff;
   cursor: pointer;
-  grid-column: 2;
-  align-self: center;
-  justify-self: center;
+  grid-column: 1;
+  /* align-self: center; */
+  justify-self: left; 
+  border: 1px solid red;
 }
 .switch::after {
   content: '';
@@ -213,24 +238,25 @@ input:focus {
   top: 1px;
   left: 1px;
   transition: all 0.3s;
-  grid-column: 2;
+  grid-column: 1;  
 }
 .toggle:checked+.switch::after {
-  left: 20px;
+  left: 40px;
 }
 .toggle:checked+.switch {
-  background-color: #7983ff;
+  background-color: #18a2e2;
 }
 .toggle {
   display: none;
 }
 
 .mainLibrary {
-  margin: 50px 5%;
+  margin: 50px 5%;  
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(100px, 300px));
-  grid-auto-rows: 250px;
+  grid-auto-rows: 270px;
   gap: 30px;
+  overflow: auto;
 }
 
 .card {
@@ -243,12 +269,12 @@ input:focus {
   background-size: 90%; */
   row-gap: 0px;
   border: 4px transparent;
-  border-left: 5px solid rgb(5, 193, 250);
+  border-left: 5px solid rgb(3, 196, 202);
   border-radius: 20px;
   justify-content: space-around;
   box-shadow: 0px 6px 6px 0px rgb(32, 32, 32);
   transition: 0.3s transform ease;
-  overflow: hidden;
+  overflow: overflow;
   /* Add this line */
 }
 .card:hover {
@@ -260,6 +286,7 @@ input:focus {
   /* border: 1px solid red; */
   margin: 0px 5px 0px 0px;
   padding-top: 5px;  
+  padding-left: 10px;
 }
 .book-image-container {
   display: flex;
@@ -276,38 +303,22 @@ input:focus {
 .buttons {
   width: 95%;
   display: flex;
-  align-items: center;
+  align-items: start;
   justify-content: space-between;
   padding-left: 10px;
-  /* border: 1px solid red; */
+  /* border: 1px solid red;  */
 }
 
 .toggle-read-container{
   display: flex;
   align-items: center;
 }
-select#gender option[value="male"]   { background-image:url(./images/1520624981944.png);   }
-select#gender option[value="female"] { background-image:url(./images/icons8-open-book-emoji-48.png); }
-select#gender option[value="others"] { background-image:url(others.png); }
 
-.backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(7, 102, 94, 0.623);
-  /* Semi-transparent black */
-  backdrop-filter: blur(8px);
-  /* Apply blur effect */
-  z-index: 999;
-  display: none;
-  /* Initially hidden */
-}
+
 
 .footer {
   color: white;
   text-align: center;
   background-color: rgb(82, 94, 100);
-  z-index: 2;
+  /* z-index: 2; */
 }
